fix: incorrect z-index for helpButton

--- a/src/app/view/main/html/html.module.css
+++ b/src/app/view/main/html/html.module.css
@@ -85,6 +85,7 @@
         font-size: 15px;
     }
     .helpButton {
+        z-index: 0;
         position: relative;
         width: 100%;
     }
